[package]
name = "shittd"
version = "0.1.1"
edition = "2021"
description = "A silly CLI tool for tracking your shit to do"

[dependencies]
clap = {version="4.5.16", features = ["derive"]}
anyhow = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
chrono = {version="0.4.38", features = ["serde"] }
home = "0.5.9"
ansi_term = "0.12.1"
tabled = "0.16.0"
term_size = "0.3.2"
textwrap = "0.16.1"
