[package]
name = "shittd"
version = "0.1.2"
edition = "2021"
description = "A silly CLI tool for managing the shit you have to do"
repository = "https://github.com/delfanbaum/shittd"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cli", "shittd", "to do list"]
categories = ["command-line-utilities"]

[dependencies]
clap = {version="4.5.16", features = ["derive"]}
anyhow = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
chrono = {version="0.4.38", features = ["serde"] }
home = "0.5.9"
ansi_term = "0.12.1"
tabled = "0.16.0"
term_size = "0.3.2"
textwrap = "0.16.1"
